<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>app</artifactId>
  <build>
    <plugins>
      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <groupId>org.springframework.boot</groupId>
        <version>2.7.4</version>
      </plugin>
      <plugin>
        <artifactId>jacoco-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <goals>
              <goal>report</goal>
            </goals>
            <id>report</id>
            <phase>test</phase>
          </execution>
        </executions>
        <groupId>org.jacoco</groupId>
        <version>0.8.8</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.2.0</version>
        <dependencies>
          <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>10.3.4</version>
          </dependency>
        </dependencies>
        <configuration>
          <consoleOutput>true</consoleOutput>
          <configLocation>google_checks.xml</configLocation>
          <linkXRef>false</linkXRef>
          <suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation>
          <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <artifactId>spring-boot-starter-web</artifactId>
      <groupId>org.springframework.boot</groupId>
      <version>2.7.4</version>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
      <groupId>org.springframework.boot</groupId>
      <version>2.7.4</version>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
      <groupId>org.springframework.boot</groupId>
      <version>2.7.4</version>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-security</artifactId>
      <groupId>org.springframework.boot</groupId>
      <version>2.7.4</version>
    </dependency>
    <dependency>
      <artifactId>cognitoidentityprovider</artifactId>
      <groupId>software.amazon.awssdk</groupId>
    </dependency>
    <dependency>
      <artifactId>postgresql</artifactId>
      <groupId>org.postgresql</groupId>
      <scope>runtime</scope>
      <version>42.5.0</version>
    </dependency>
    <dependency>
      <artifactId>h2</artifactId>
      <groupId>com.h2database</groupId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-test</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>spring-security-test</artifactId>
      <groupId>org.springframework.security</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>spring-addons-oauth2-test</artifactId>
      <groupId>com.c4-soft.springaddons</groupId>
      <version>${springaddons.version}</version>
    </dependency>

    <dependency>
      <artifactId>springdoc-openapi-ui</artifactId>
      <groupId>org.springdoc</groupId>
      <version>1.6.11</version>
    </dependency>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <scope>provided</scope>
      <version>1.18.24</version>
    </dependency>
    <dependency>
      <artifactId>modelmapper</artifactId>
      <groupId>org.modelmapper</groupId>
      <version>3.1.0</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.9.1</version>
      <scope>compile</scope>
    </dependency>
  </dependencies>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <artifactId>bom</artifactId>
        <groupId>software.amazon.awssdk</groupId>
        <scope>import</scope>
        <type>pom</type>
        <version>2.17.285</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <description>Zetch project for Spring Boot</description>
  <groupId>io.zetch</groupId>
  <modelVersion>4.0.0</modelVersion>
  <name>Zetch Reviews App</name>
  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/>
    <version>2.7.3</version> <!-- lookup parent from repository -->
  </parent>

  <properties>
    <app-type>webmvc</app-type>
    <java.version>17</java.version>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    <sonar.organization>astrohsy</sonar.organization>
    <springaddons.version>6.0.0</springaddons.version>
    <token>jwt</token>
  </properties>

  <version>0.0.1-SNAPSHOT</version>

</project>
